--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -1078,3 +1078,14 @@ select:disabled,
     transform: skew(0deg);
   }
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
